# OOP

./: CMakeLists.txt  main.c
Examen Practic/: main.cpp
Examen Practic/Business/: SerivceStudenti.cpp  SerivceStudenti.h
Examen Practic/Domain/: Student.cpp  Student.h
Examen Practic/Errors/: Erori.h
Examen Practic/Persistance/: RepoStudenti.cpp  RepoStudenti.h
Examen Practic/Presentation/: GUI.cpp  GUI.h  MyModelView.h
Examen Practic/Test/: Test.cpp  Test.h
Interface/: console.c
Lab10_11/: CMakeLists.txt  main.cpp
Lab10_11/Bussines/: ServiceFilme.h
Lab10_11/Domain/: Film.cpp
Lab10_11/Errors/: Erori.h
Lab10_11/Presentation_QT/: UI_QT.cpp  UI_QT.h
Lab10_11/Repository/: BaseRepo.h  FileRepoFilme.h  RepoFilme.cpp  RepoFilme.h
Lab10_11/Tests/: Teste.cpp
Lab10_11/Undo/: ActiuneUndo.h
Lab10_11/Utilitar/: MyVector.h
Lab10_11/Validator/: Validator.cpp  Validator.h
Lab13_14/: main.cpp
Lab13_14/Bussines/: ServiceFilme.cpp  ServiceFilme.h
Lab13_14/Tests/: Teste.h
Lab6_7/: CMakeLists.txt  main.cpp
Lab6_7/Bussines/: ServiceFilme.cpp
Lab6_7/Cos_Inchiriere/: CosFilme.cpp  CosFilme.h
Lab6_7/Domain/: Film.h
Lab6_7/Errors/: Erori.cpp
Lab6_7/Presentation/: Console.h
Lab6_7/Utilitar/: MyString.cpp
Lab_5/: CMakeLists.txt  listaOferte.c  listaOferte.h  main.c  oferta.c  oferta.h  ofertaRepo.c  ofertaRepo.h  ofertaService.c  ofertaService.h  testOfertaRepo.c  testOfertaRepo.h  testOfertaService.c  testOfertaService.h  ui.c  ui.h
Laboratorul_1/: CMakeLists.txt  main.c
Service/: service_masini.h
Tests/: teste.h
Validation/: validator.c
(+63 files in other folders)
